--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,8 @@ nav:
       - inference.md
       - tests.md
 
+repo_url: https://github.com/swo/stats-book
+
 theme:
   name: "material"
   features:
