--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,8 @@ nav:
   - Inferential statistics:
       - inference.md
       - tests.md
+      - regression.md
+  - appendix.md
 
 repo_url: https://github.com/swo/stats-book
 
