--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
       - inference.md
       - tests.md
       - regression.md
+  - generating_functions.md
   - appendix.md
 
 repo_url: https://github.com/swo/stats-book
