Add size bias (#14)
* Add size bias

* Generating functions

* Generating functions & size bias

* Flesh out

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - inference.md
       - tests.md
       - regression.md
+  - generating_functions.md
   - appendix.md
 
 repo_url: https://github.com/swo/stats-book
